force-app/main/default/objects/FNS_CommunityUserManagement__e/FNS_CommunityUserManagement__e.object-meta.xml
<CustomObject>
    <label>Community User Management</label>
    <pluralLabel>Community Users Management</pluralLabel>
</CustomObject>