force-app/main/default/objects/FNS_CommunityUserManagement__e/fields/FNS_ProfileName__c.field-meta.xml
<CustomField>
    <fullName>FNS_ProfileName__c</fullName>
    <label>Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>