force-app/main/default/objects/FNS_CommunityUserManagement__e/fields/FNS_UserId__c.field-meta.xml
<CustomField>
    <fullName>FNS_UserId__c</fullName>
    <label>User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>